# mcp-smart-router

./: Cargo.toml  router.toml
crates/mcp-router-cli/: Cargo.toml
crates/mcp-router-cli/src/: app_config.rs  main.rs
crates/mcp-router-core/: Cargo.toml
crates/mcp-router-core/src/: lib.rs
crates/mcp-router-engine/: Cargo.toml
crates/mcp-router-engine/src/: keyword.rs  lib.rs  vector.rs
crates/mcp-router-transport/: Cargo.toml
crates/mcp-router-transport/src/: json_rpc.rs  lib.rs
crates/mcp-router-transport/src/client/: manager.rs
crates/mcp-router-transport/src/server/: handler.rs  mod.rs  sse.rs  stdio.rs
