[package]
name = "mcp-router-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap = { version = "4.5.54", features = ["derive"] }
mcp-router-transport = { path = "../mcp-router-transport" }
