[package]
name = "mcp-router-transport"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
hashbrown.workspace = true
uuid = { version = "1.19.0", features = ["v4"] }
mcp-router-core = { path = "../mcp-router-core" }
