[package]
name = "mcp-router-transport"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
hashbrown.workspace = true
reqwest = { version = "0.13.1", features = ["json", "stream"]}
eventsource-stream = "0.2.3"
uuid = { version = "1.20", features = ["v4"] }
mcp-router-core = { path = "../mcp-router-core" }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors"] }
